Rewrite frogger map support.